--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 Django==5.1.3
 django-cors-headers==4.6.0
+django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 executing==2.1.0
@@ -118,6 +119,7 @@ tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.3.0
+torch==2.4.1+cpu
 tornado==6.4.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
